--- a/modulo2/estilo.css
+++ b/modulo2/estilo.css
@@ -9,13 +9,14 @@
     font-family: fantasy;
     font-size: 60px;
     text-align: center;
-    
+
 
 }
 .des{
     background-color: rgb(214, 173, 124);
     border: 20px;
     border-color: aqua;
+    text-align: center;
     
 }
 .edad
