--- a/style.css
+++ b/style.css
@@ -32,10 +32,9 @@ body::before {
   content: '';
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.3); /* oscurece */
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: -1;
 }
-
 
 .calculadora {
   background-color: var(--panel-madera);
@@ -46,6 +45,7 @@ body::before {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  width: 350px;
   backdrop-filter: blur(2px);
 }
 
@@ -55,10 +55,14 @@ body::before {
   color: #222;
   font-size: 14px;
   text-align: right;
-  min-height: 60px;
+  height: 80px;
   border: 4px inset var(--borde-madera);
   box-shadow: inset -3px -3px 0 #ffffff55, inset 3px 3px 0 #00000055;
   overflow-x: auto;
+  white-space: nowrap;
+  word-break: break-word;
+  border-radius: 6px;
+  width: 100%;
 }
 
 .botones {
@@ -76,7 +80,7 @@ body::before {
   font-size: 11px;
   text-shadow: 1px 1px 0 #000;
   box-shadow: 0 5px 0 var(--sombra-boton);
-  transition: transform 0.1s ease;
+  transition: transform 0.2s ease;
   cursor: pointer;
   border-radius: 4px;
 }
@@ -93,12 +97,19 @@ body::before {
   grid-column: span 2;
 }
 
-
 .pixel-button:hover {
   filter: brightness(1.1);
 }
 
 
 
+#particles-canvas {
+  position: fixed;
+  inset: 0;
+  z-index: 0;
+  pointer-events: none;
+  image-rendering: pixelated;
+  size: 10px;
+}
 
 
