--- a/modulo3/portafolio/portafolio/style.css
+++ b/modulo3/portafolio/portafolio/style.css
@@ -115,7 +115,7 @@ textarea {
   font-size: var(--fs-base);     
   line-height: 1.67em;          
   opacity: 0.4;                  
-  color: #555;               
+  color: #000000;               
   margin-bottom: 0.94em;         
 }
 
@@ -275,7 +275,7 @@ textarea {
 .hellodetalles{
     margin-bottom: 1.67em;
     text-align: justify;
-    color: #4a4a4a;
+    color: #000000;
 }
 
 
@@ -366,7 +366,7 @@ textarea {
 /*resume*/
 .resumecontainer {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Asegúrate de que esto esté correcto */
+    grid-template-columns: repeat(2, 1fr); 
     column-gap: 3.75rem;
 }
 
@@ -409,8 +409,8 @@ textarea {
 .habcontainer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Alinear a la izquierda */
-    margin-top: 2rem; /* Espacio superior */
+    align-items: flex-start; 
+    margin-top: 2rem;
 }
 
 .habilidadestitulo {
@@ -420,29 +420,29 @@ textarea {
 }
 
 .hablista {
-    list-style: none; /* Eliminar viñetas */
-    padding: 0; /* Eliminar padding */
-    width: 100%; /* Ancho completo */
-    max-width: 800px; /* Ancho máximo */
-    margin: 0; /* Sin margen */
+    list-style: none; 
+    padding: 0; 
+    width: 100%; 
+    max-width: 800px; 
+    margin: 0; 
 }
 
 .habitem {
     display: flex;
-    align-items: center; /* Centrar verticalmente */
-    background: #f9f9f9; /* Fondo claro */
-    color: #4a4a4a; /* Color del texto */
+    align-items: center; 
+    background: #f9f9f9; 
+    color: #4a4a4a; 
     padding: 1rem;
-    border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra sutil */
-    margin-bottom: 1rem; /* Espacio entre elementos */
-    transition: transform 0.3s, box-shadow 0.3s; /* Transiciones suaves */
-    width: calc(100% - 20px); /* Ancho completo menos un margen */
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+    margin-bottom: 1rem; 
+    transition: transform 0.3s, box-shadow 0.3s; 
+    width: calc(100% - 20px); 
 }
 
 .habitem:hover {
-    transform: translateY(-3px); /* Efecto de elevación */
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Sombra más intensa al pasar el mouse */
+    transform: translateY(-3px); 
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); 
 }
 
 .icon {
